--- a/src/app/identity/register/register.component.html
+++ b/src/app/identity/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="register-container">
-  <h2>Create Account</h2>
+  <h2>Create Your Account</h2>
   <form #registerForm="ngForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="userName">Username</label>
