--- a/src/app/identity/register/register.component.scss
+++ b/src/app/identity/register/register.component.scss
@@ -14,10 +14,10 @@
 
   h2 {
     text-align: center;
-    color: #333;
+    color: #92614C;
     margin-bottom: 30px;
     font-weight: 600;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     letter-spacing: 1px;
   }
 
