--- a/src/app/identity/login/login.component.html
+++ b/src/app/identity/login/login.component.html
@@ -1,65 +1,19 @@
-<section class="pt-5">
-    <div class="form-container">
-        <h2 class="text-center">Login</h2>
-        <form [formGroup]="formGroup" (ngSubmit)="Submit()">
-
-            <div class="form-group">
-                <label for="email">email</label>
-                <input type="email" class="form-control" formControlName="email" [class.is-valid]="_email.valid"
-                    [class.is-invalid]="_email.invalid&&_email.touched">
-                @if (_email.hasError('required')) {
-                <span class="text-danger">email is required</span>
-                }@else if (_email.hasError('email')) {
-                <span class="text-danger">email format invalid Expample:test&#64;ts.ts</span>
-                }
-            </div>
-            <div class="form-group">
-                <label for="password">password</label>
-                <input type="password" class="form-control" formControlName="password"
-                    [class.is-valid]="_password.valid" [class.is-invalid]="_password.invalid&&_password.touched">
-                @if (_password.hasError('required')) {
-                <span class="text-danger">password is required</span>
-                }@else if (_password.hasError('pattern')) {
-                <span class="text-danger">
-                    Password must contain at least one number, one special character (#$&#64;!.), and be at
-                    least 8 characters long.
-                </span>
-                }
-            </div>
-            <div class="form-group">
-                <button class="btn btn-info w-100" [disabled]="formGroup.invalid">
-                    Login <i class="fa fa-sign-in"></i>
-                </button>
-            </div>
-            <div class="form-group pt-3">
-                <div class="d-flex justify-content-between align-items-center">
-                    <button class="btn btn-danger" routerLink="/Account/Register">Create account?</button>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        Forget password
-                    </button>
-                </div>
-            </div>
-        </form>
+<div class="login-container">
+  <h2 >Login To your Account</h2>
+  <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input type="email" id="email" class="form-control" required [(ngModel)]="loginModel.email" name="email">
     </div>
-
-
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Forget password </h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <input type="text" placeholder="example@email.com" class="form-control" [(ngModel)]="emailModel">
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" (click)="SendEmailForgetpassword()" class="btn btn-primary">Send</button>
-                </div>
-            </div>
-        </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" id="password" class="form-control" required [(ngModel)]="loginModel.password" name="password">
     </div>
-</section>
-<!-- Button trigger modal -->
+    <button type="submit" class="btn-primary" [disabled]="!loginForm.form.valid">Login</button>
+  </form>
+  <div *ngIf="errorMessage" class="error">{{ errorMessage }}</div>
+
+  <div class="account-message">
+    <p *ngIf="!accountExists">Don't have an account? <a routerLink="/register"><span style="text-decoration: none;color: #92614C;">Create Your Account</span></a>.</p>
+  </div>
+</div>
